[build-system]
requires = ["hatchling"]
build-backend="hatchling.build"

[project]
name = "airflow-common-operators"
authors = [{name = "the airflow-common-operators authors", email = "t.paine154@gmail.com"}]
description = "Common operators and tasks for airflow"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "0.1.1"
requires-python = ">=3.9"
keywords = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "apache-airflow>=2,<3",
    "pydantic",
]

[project.optional-dependencies]
develop = [
    "build",
    "bump-my-version",
    "check-manifest",
    "hatchling",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
    "wheel",
    # Config
    "airflow-config>=0.1.2",
]

[project.scripts]

[project.urls]
Repository = "https://github.com/airflow-laminar/airflow-common-operators"
Homepage = "https://github.com/airflow-laminar/airflow-common-operators"

[tool.bumpversion]
current_version = "0.1.1"
commit = true
tag = false

[[tool.bumpversion.files]]
filename = "airflow_common_operators/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.check-manifest]
ignore = [
    ".copier-answers.yml",
    "Makefile",
    "setup.py",
    "docs/**/*",
]

[tool.coverage.run]
branch = true
omit = [
    "airflow_common_operators/tests/integration/",
]
[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 50

[tool.hatch.build]
artifacts = []

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
packages = ["airflow_common_operators"]

[tool.hatch.build.targets.wheel]
packages = ["airflow_common_operators"]

[tool.pytest.ini_options]
addopts = ["-vvv", "--junitxml=junit.xml"]
asyncio_mode = "strict"
testpaths = "airflow_common_operators/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["airflow_common_operators"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.yardang]
title = "airflow-common-operators"
root = "README.md"
pages = ["docs/src/API.md"]
use-autoapi = false

